globus-xio-popen-driver (1:3.6-2+gt6.@distro@) @distro@; urgency=low

  * Packaging update to ensure priority of Globus packages

 -- Globus Toolkit <support@globus.org>  Mon, 25 Nov 2019 10:41:49 -0600

globus-xio-popen-driver (3.6-1+gt6.@distro@) @distro@; urgency=low

  * Update bug report URL

 -- Globus Toolkit <support@globus.org>  Sat, 20 Aug 2016 09:11:42 -0400

globus-xio-popen-driver (3.5-2+gt6.@distro@) @distro@; urgency=low

  * Rename binary package from libglobus-xio-popen-driver0 to
    libglobus-xio-popen-driver since it is an unversioned shared object

 -- Globus Toolkit <support@globus.org>  Fri, 04 Dec 2015 08:44:50 -0500

globus-xio-popen-driver (3.5-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-xio-popen-driver (3.4-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-xio-popen-driver (3.4-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:43 -0400

globus-xio-popen-driver (3.4-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:39 -0400

globus-xio-popen-driver (3.3-1+gt6.@distro@) @distro@; urgency=low

  * Don't version dynamic module

 -- Globus Toolkit <support@globus.org>  Tue, 06 May 2014 08:40:26 -0400

globus-xio-popen-driver (3.2-2+gt6.@distro@) @distro@; urgency=low

  * Fix filelist for unversioned .so

 -- Globus Toolkit <support@globus.org>  Thu, 24 April 2014 10:10:21 -0400

globus-xio-popen-driver (3.2-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:28 -0400

globus-xio-popen-driver (3.1-3+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency
