@@ -13,7 +13,7 @@ include /usr/share/quilt/quilt.make
 
 name = globus-xio-popen-driver
 _name = globus_xio_popen_driver
-version = 3.6
+version = 3.7
 soname = 0
 
 INSTALLDIR = $(CURDIR)/debian/tmp
