@@ -1,3 +1,9 @@
+globus-xio-popen-driver (1:3.7-1) @distro@; urgency=low
+
+  * fix cancellability of exec'd app when a close timeout is triggered
+
+ -- Globus Toolkit <support@globus.org>  Fri, 31 Jul 2020 09:01:43 -0500
+
 globus-xio-popen-driver (1:3.6-2+gt6.@distro@) @distro@; urgency=low
 
   * Packaging update to ensure priority of Globus packages
